--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -21,7 +21,7 @@ jobs:
         pip install
         uv
     - name: Build a binary wheel and a source tarball
-      run: uv build --sdist --wheel --outdir dist
+      run: uv build --sdist --wheel --out-dir dist
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
