--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-test = [
+dev = [
+    "coverage>=7.10.1",
+    "pytest-cov>=6.2.1",
     "hypothesis>=6.136.7",
     "pytest>=8.4.1",
     "ruff>=0.8.0",
