--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       run: uv python install 3.13
     
     - name: Install dependencies
-      run: uv sync --group test
+      run: uv sync --group dev
     
     - name: Run tests
       run: uv run pytest .
