--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,8 +1,8 @@
-name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
+name: Publish to PyPI
 
 on: 
   release:
-    types: [released]
+    types: [published]
   workflow_dispatch:
 
 jobs:
