use workflow_call as release events don't seem to trigger from automated releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,3 +55,11 @@ jobs:
         draft: false
         prerelease: false
         generate_release_notes: true
+
+  publish-pypi:
+    needs: new-release
+    if: needs.new-release.outputs.version_changed == 'true'
+    uses: ./.github/workflows/pypi.yml
+    with:
+      version: ${{ needs.new-release.outputs.current_version }}
+    secrets: inherit
