--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
     permissions:
       contents: write
     needs: rel-test
+    outputs:
+      version_changed: ${{ steps.version-check.outputs.version_changed }}
 
     steps:
     - uses: actions/checkout@v4
@@ -60,6 +62,4 @@ jobs:
     needs: new-release
     if: needs.new-release.outputs.version_changed == 'true'
     uses: ./.github/workflows/pypi.yml
-    with:
-      version: ${{ needs.new-release.outputs.current_version }}
     secrets: inherit
