--- a/ruff.toml
+++ b/ruff.toml
@@ -3,5 +3,5 @@ lint.ignore = ["D203", "G004"]
 line-length = 128
 
 [lint.per-file-ignores]
-"test_*.py" = ["S101", "D103"]
+"test_*.py" = ["S101", "D103", "SLF001"]
 "examples/*.py" = ["ALL"]
