--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "confkit"
-version = "0.1.3"
+version = "0.1.4"
 description = "Lightweight and Easy to use configuration manager for Python projects"
 readme = "README.md"
 authors = [
@@ -15,11 +15,12 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
-    "coverage>=7.10.1",
+    "coverage>=7.10.3",
     "pytest-cov>=6.2.1",
-    "hypothesis>=6.136.7",
+    "hypothesis>=6.138.1",
     "pytest>=8.4.1",
-    "ruff>=0.8.0",
+    "ruff>=0.12.9",
+    "coveralls>=4.0.1",
 ]
 
 [[tool.pyright.executionEnvironments]]
