--- a/examples/config.ini
+++ b/examples/config.ini
@@ -15,12 +15,12 @@ auto_reload = False
 
 [DatabaseConfig]
 host = localhost
-port = 5432
+port = 5433
 name = app_db
 user = admin
 password = 
-connection_string = sqlite:///fallback.db
-username = 
+connection_string = postgresql://localhost/mydb
+username = admin
 
 [CacheConfig]
 enabled = True
