--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
 name: Auto-release
 
 on:
-  push:
-    branches: [ master ]
+  workflow_run:
+    workflows: ["Test"]
+    branches: [master]
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
@@ -13,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    needs: rel-test
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     outputs:
       version_changed: ${{ steps.version-check.outputs.version_changed }}
 
