--- a/ruff.toml
+++ b/ruff.toml
@@ -1,6 +1,7 @@
 lint.select = ["ALL"]
 lint.ignore = ["D203", "G004"]
 line-length = 128
+target-version = "py311"
 
 [lint.per-file-ignores]
 "test_*.py" = ["S101", "D103", "SLF001"]
