--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,13 @@ dev = [
     "ruff>=0.12.9",
     "coveralls>=4.0.1",
 ]
+docs = [
+    "mkdocs>=1.6.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocstrings[python]>=0.30.0",
+    "mkdocs-pdoc-plugin @ git+https://github.com/spirali/mkdocs-pdoc-plugin",
+    "pdoc>=15.0.0",
+]
 
 [[tool.pyright.executionEnvironments]]
 root = "."
