allow ty to only check src, always avoid checking tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,7 @@ docs = [
 root = "."
 include = ["**/test_*.py", "**/tests/**/*.py"]
 reportPrivateUsage = "none"
+
+[tool.ty.src]
+include = ["src"]
+exclude = ["tests"]
