ignore false positive
See https://github.com/HEROgold/confkit/actions/runs/20050300005/job/57504597832#step:8:22
for more details. TY is in it's alpha phase. we just ignore this until it's fixed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,6 @@ reportPrivateUsage = "none"
 [tool.ty.src]
 include = ["src"]
 exclude = ["tests"]
+
+[tool.ty.rules]
+invalid-assignment = "ignore"
