--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
 name: Test
 
 on:
+  push:
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
   workflow_dispatch:
   workflow_call:
 
@@ -17,24 +19,24 @@ jobs:
       fail-fast: false
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install uv
-      uses: astral-sh/setup-uv@v4
-      with:
-        version: "latest"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
 
-    - name: Set up Python ${{ matrix.python-version }}
-      run: uv python install ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: uv sync --group dev
+      - name: Install dependencies
+        run: uv sync --group dev
 
-    - name: Run tests
-      run: uv run pytest .
+      - name: Run tests
+        run: uv run pytest .
 
-    - name: Run ruff check
-      run: uv run ruff check .
+      - name: Run ruff check
+        run: uv run ruff check .
 
-    - name: Run type checking
-      run: uvx ty check . --ignore no-matching-overload
+      - name: Run type checking
+        run: uvx ty check . --ignore no-matching-overload
