--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ authors = [
 requires-python = ">=3.11"
 dependencies = []
 
+[project.optional-dependencies]
+pydantic = [
+    "pydantic>=2.12.5",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -18,6 +23,7 @@ dev = [
     "coverage>=7.10.3",
     "pytest-cov>=7.0.0",
     "hypothesis>=6.138.14",
+    "pydantic>=2.12.5",
     "pytest>=8.4.1",
     "ruff>=0.12.9",
     "coveralls>=4.0.1",
