--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = []
 pydantic = [
     "pydantic>=2.12.5",
 ]
+msgspec = [
+    "msgspec>=0.20.0",
+    "pyyaml>=6.0.3", # required by msgspec
+    "tomli-w>=1.2.0", # required by msgspec
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -27,6 +32,10 @@ dev = [
     "pytest>=9.0.2",
     "ruff>=0.14.10",
     "coveralls>=4.0.2",
+    "msgspec>=0.20.0",
+    "pyyaml>=6.0.3",
+    "tomli-w>=1.2.0",
+    "pytest-order>=1.3.0",
 ]
 docs = [
     "mkdocs>=1.6.0",
