--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,9 +35,7 @@ jobs:
       - name: Cache uv dependencies
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.cache/uv
-            ${{ env.VIRTUAL_ENV }}
+          path: ~/.cache/uv
           key: ${{ runner.os }}-uv-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml', '**/uv.lock', 'src/**') }}
           restore-keys: |
             ${{ runner.os }}-uv-${{ matrix.python-version }}-
