--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,18 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          version: "latest"
-
-      - name: Set up Python ${{ matrix.python-version }}
-        run: uv python install ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: uv sync --group dev
-
       - name: Cache pytest results
+        id: cache-pytest
         uses: actions/cache@v4
         with:
           path: .pytest_cache
@@ -43,11 +33,28 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pytest-${{ matrix.python-version }}-
 
+      - name: Install uv
+        if: steps.cache-pytest.outputs.cache-hit != 'true'
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Set up Python ${{ matrix.python-version }}
+        if: steps.cache-pytest.outputs.cache-hit != 'true'
+        run: uv python install ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        if: steps.cache-pytest.outputs.cache-hit != 'true'
+        run: uv sync --group dev
+
       - name: Run tests
+        if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uv run pytest .
 
       - name: Run ruff check
+        if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uv run ruff check .
 
       - name: Run type checking
+        if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uvx ty check . --ignore no-matching-overload
