--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,3 +58,15 @@ jobs:
       - name: Run type checking
         if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uvx ty check . --ignore no-matching-overload
+
+  sentry:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Sentry release
+        uses: getsentry/action-release@v3
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+        with:
+          environment: production
