--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -9,47 +9,32 @@ permissions:
   contents: read
 
 jobs:
-  build:
-    name: Build distribution 📦
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        persist-credentials: false
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.x"
-    - name: Install pypa/build
-      run: >-
-        python3 -m
-        pip install
-        uv
-    - name: Build a binary wheel and a source tarball
-      run: uv build --sdist --wheel --out-dir dist
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v4
-      with:
-        name: python-package-distributions
-        path: dist/
-
   publish-to-pypi:
     name: Publish Python 🐍 distribution 📦 to PyPI
-    needs:
-    - build
     runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://pypi.org/p/confkit
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
+      contents: read
 
     steps:
-    - name: Download all the dists
-      uses: actions/download-artifact@v4
+    - name: Checkout
+      uses: actions/checkout@v4
       with:
-        name: python-package-distributions
-        path: dist/
+        persist-credentials: false
+    
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
+    
+    - name: Set up Python
+      run: uv python install 3.14
+    
+    - name: Build distribution 📦
+      run: uv build
+    
     - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      run: uv publish
