--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  check-cache:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,28 +33,34 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pytest-${{ matrix.python-version }}-
 
+  test:
+    runs-on: ubuntu-latest
+    needs: check-cache
+    if: needs.check-cache.outputs.cache-hit != 'true'
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+      fail-fast: false
+
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Install uv
-        if: steps.cache-pytest.outputs.cache-hit != 'true'
-        uses: astral-sh/setup-uv@v4
+        uses: astral-sh/setup-uv@v7
         with:
-          version: "latest"
+          enable-cache: true
 
       - name: Set up Python ${{ matrix.python-version }}
-        if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uv python install ${{ matrix.python-version }}
 
       - name: Install dependencies
-        if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uv sync --group dev
 
       - name: Run tests
-        if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uv run pytest .
 
       - name: Run ruff check
-        if: steps.cache-pytest.outputs.cache-hit != 'true'
         run: uv run ruff check .
 
       - name: Run type checking
-        if: steps.cache-pytest.outputs.cache-hit != 'true'
-        run: uvx ty check . --ignore no-matching-overload
+        run: uv run ty check . --ignore no-matching-overload
