--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,4 +63,4 @@ jobs:
         run: uv run ruff check .
 
       - name: Run type checking
-        run: uv run ty check . --ignore no-matching-overload
+        run: uvx ty check . --ignore no-matching-overload
