--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -20,7 +20,7 @@ setup_hooks = []
 pre_commit_hooks = []
 post_commit_hooks = []
 
-[tool.bumpversion.files]
+[[tool.bumpversion.files]]
 filename = "pyproject.toml"
 search = 'version = "{current_version}"'
 replace = 'version = "{new_version}"'
